Compiler Bouw/compiler/test/basic/stephen/fail/lone_else.cvc
// Should produce a type checking error because binop types should match.

#include "civic.h"

export int main() {
    else {}
    return 0;
}
